chore: update semantic-release config

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,7 +1,7 @@
 {
   "branch": "master",
   "tagFormat": "${version}",
-  "dryRun": true,
+  "dryRun": false,
   "ci": false,
   "plugins": [
     ["@semantic-release/commit-analyzer", {
